src/renderer/index.css
body {
  margin: 0;
  font-family: 'Nunito Sans', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

img {
 -webkit-user-drag: none;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

::-webkit-scrollbar {
  width: 12px;
}
::-webkit-scrollbar-track {
  border-radius: 10px;
  background: #1C1C1C;
}
::-webkit-scrollbar-thumb {
  border-radius: 10px;
  background: #2c2c2c;
}

h1, h2, h3, h4, h4, h5, h6 {
  color: rgba(255, 255, 255, 0.65) !important;
  font-weight: 600;
}

h1 {
  font-size: 30px;
}

h2 {
  font-size: 27px;
}

h3 {
  font-size: 23px;
}

h4 {
  font-size: 21px;
}

h5 {
  font-size: 17px;
}

h6 {
  font-size: 15px;
}

